# bewcloud-desktop

./: Makefile  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml  test.yml
src/: App.tsx  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChooseRemoteDirectoriesModal.tsx  EditRemoteModal.tsx
