[package]
name = "bewcloud-sync"
version = "0.0.2"
description = "Desktop Sync Client for bewCloud"
authors = ["Bruno Bernardino"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-request", "fs-read-dir", "dialog-confirm", "dialog-ask", "path-all", "fs-read-file", "fs-write-file", "fs-exists", "shell-execute", "dialog-open", "dialog-message", "system-tray", "shell-open", "icon-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-std = "1.12.0"
chrono = "0.4.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
